fix button fix z-index

--- a/src/style/Top.sass
+++ b/src/style/Top.sass
@@ -14,7 +14,6 @@ $shamap_orange: #FA6705
     justify-content: center
     align-items: center
     color: #fff
-    z-index: -1
     height: 50vh
     min-height: 33vw
     position: relative
@@ -33,6 +32,7 @@ $shamap_orange: #FA6705
       background-size: cover
       background-position: center center
       filter: grayscale(20%) brightness(80%)
+      z-index: -1
     img
       // width: 50vw
       height: 37.5vw
@@ -72,7 +72,7 @@ $shamap_orange: #FA6705
         filter: drop-shadow(0px 0px 4px #000)
         transition: .3s
         &:hover
-          filter: drop-shadow(0px 0px 0px #000)
+          filter: drop-shadow(0px 0px 6px #fff)
         @media screen and (max-width: 767px)
           width: auto
           margin: 1rem
